--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^4.8.0",
     "react-paginate": "^8.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
