--- a/package.json
+++ b/package.json
@@ -1,62 +1,67 @@
 {
-  "name": "amazon-clone",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "antd": "^5.5.0",
-    "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
-    "react-icons": "^4.8.0",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-paginate": "^8.2.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.10",
-    "swiper": "^9.2.4",
-    "twin.macro": "^3.3.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
-  }
+    "name": "amazon-clone",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "antd": "^5.5.0",
+        "axios": "^1.4.0",
+        "formik": "^2.4.0",
+        "i18next": "^22.5.0",
+        "i18next-browser-languagedetector": "^7.0.1",
+        "i18next-http-backend": "^2.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-feather": "^2.0.10",
+        "react-i18next": "^12.3.1",
+        "react-icons": "^4.8.0",
+        "react-infinite-scroll-component": "^6.1.0",
+        "react-paginate": "^8.2.0",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.11.1",
+        "react-scripts": "5.0.1",
+        "styled-components": "^5.3.10",
+        "swiper": "^9.2.4",
+        "twin.macro": "^3.3.1",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0",
+        "yup": "^1.2.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/styled-components": "^5.1.26",
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2"
+    }
 }
