--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
         "i18next-browser-languagedetector": "^7.0.1",
         "i18next-http-backend": "^2.2.1",
         "react": "^18.2.0",
+        "react-animate-on-scroll": "^2.1.7",
         "react-dom": "^18.2.0",
         "react-feather": "^2.0.10",
         "react-i18next": "^12.3.1",
         "react-icons": "^4.8.0",
-        "react-infinite-scroller": "^1.2.6",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
