--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "i18next-browser-languagedetector": "^7.0.1",
         "i18next-http-backend": "^2.2.1",
         "react": "^18.2.0",
-        "react-animate-on-scroll": "^2.1.7",
         "react-dom": "^18.2.0",
         "react-feather": "^2.0.10",
         "react-i18next": "^12.3.1",
@@ -26,6 +25,7 @@
         "react-query": "^3.39.3",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
+        "react-scroll": "^1.8.9",
         "styled-components": "^5.3.10",
         "swiper": "^9.2.4",
         "twin.macro": "^3.3.1",
@@ -59,6 +59,7 @@
     },
     "devDependencies": {
         "@types/react-infinite-scroller": "^1.2.3",
+        "@types/react-scroll": "^1.8.7",
         "@types/styled-components": "^5.1.26",
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.23",
