--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-feather": "^2.0.10",
         "react-i18next": "^12.3.1",
         "react-icons": "^4.8.0",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
