--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "i18next": "^22.5.0",
         "i18next-browser-languagedetector": "^7.0.1",
         "i18next-http-backend": "^2.2.1",
+        "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-feather": "^2.0.10",
