--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "swiper": "^9.2.4",
         "twin.macro": "^3.3.1",
         "typescript": "^4.4.2",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.0",
         "yup": "^1.2.0"
     },
@@ -64,6 +65,7 @@
         "@types/react-infinite-scroller": "^1.2.3",
         "@types/react-scroll": "^1.8.7",
         "@types/styled-components": "^5.1.26",
+        "@types/uuid": "^9.0.2",
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2"
