--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-i18next": "^12.3.1",
         "react-icons": "^4.8.0",
         "react-infinite-scroll-component": "^6.1.0",
+        "react-lazy-load-image-component": "^1.6.0",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
@@ -63,6 +64,7 @@
     },
     "devDependencies": {
         "@types/react-infinite-scroller": "^1.2.3",
+        "@types/react-lazy-load-image-component": "^1.5.3",
         "@types/react-scroll": "^1.8.7",
         "@types/styled-components": "^5.1.26",
         "@types/uuid": "^9.0.2",
